--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,9 @@
             <h1><a href="">\o/</a></h1>
         </div>
 
-        {{ posts }}
+        {% for post in posts %}
+            {{ posts }}
+        {% endfor%}
+
     </body>
 </html>
