--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
         </div>
 
         {% for post in posts %}
-            {{ posts }}
+            {{ post }}
         {% endfor%}
 
     </body>
